--- a/app/views/pages/how_to_play.html.erb
+++ b/app/views/pages/how_to_play.html.erb
@@ -1,2 +1,11 @@
-<h1>Pages#how_to_play</h1>
-<p>Find me in app/views/pages/how_to_play.html.erb</p>
+
+<div class="row">
+  <div class="col s12 m5">
+    <div class="card-panel blue-grey lighten-4">
+      <h3>How to Play</h3>
+        <span class="black-text">
+          <p>asdfasdf</p>
+        </span>
+      </div>
+    </div>
+  </div>
